--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -18,22 +18,25 @@
                         
                    
                         <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-success">Mostra</button>
+                                  <%=button_to "Mostra", question_path(idx), :class => "btn btn-success", :method => "get" %>
+                                  <!-- <button type="button" class="btn btn-success">Mostra</button>
                                   <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
-                                  </button>
+                                  </button> 
+                           
                                   <ul class="dropdown-menu">
-                                    <li><%= link_to "show question", question_path(idx) %></li>
+                                    <li><%#= link_to "show question", question_path(idx) %></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
-                                  </ul>
+                                  </ul> -->
                           </div>
                       
                         <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-info">Modifica</button>
+                            <%=button_tag "Modifica", :class => "btn btn-info"%>                          
+                                  <!--<button type="button" class="btn btn-info">Modifica</button>
                                   <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
@@ -44,11 +47,12 @@
                                     <li><a href="#">Something else here</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
-                                  </ul>
+                                  </ul> -->
                           </div>
                           
                          <div class="btn-group q-btn">
-                                  <button type="button" class="btn btn-danger">Cancella</button>
+                            <%=button_tag "Cancella", :class => "btn btn-danger"%>                           
+                                  <!--<button type="button" class="btn btn-danger">Cancella</button>
                                   <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Toggle Dropdown</span>
@@ -59,7 +63,7 @@
                                     <li><a href="#">Something else here</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
-                                  </ul>
+                                  </ul>-->
                           </div>
                 
                         
